[gd_scene load_steps=18 format=3 uid="uid://dma87nqv5u6l"]

[ext_resource type="Texture2D" uid="uid://iqlie3740ikl" path="res://Entities/Zombie/zombie.png" id="1_gnirk"]
[ext_resource type="Script" path="res://Entities/Zombie/zombie.gd" id="1_iajjo"]
[ext_resource type="PackedScene" uid="uid://b5mhaodm6g8i5" path="res://Entities/HitBox/damage_dealer_area.tscn" id="3_ohxbt"]
[ext_resource type="PackedScene" uid="uid://2nfy1ysxtck8" path="res://Entities/HitBox/damage_receiver_area.tscn" id="4_itt0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s08ai"]
size = Vector2(14, 15.25)

[sub_resource type="Animation" id="Animation_sj5f0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageDealerArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cf7m7"]
resource_name = "dead"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [46]
}

[sub_resource type="Animation" id="Animation_f60jp"]
resource_name = "disappear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_eur2d"]
resource_name = "dying"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_dying"
}]
}

[sub_resource type="Animation" id="Animation_x3u6u"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 30, 31, 30]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish_action"
}]
}

[sub_resource type="Animation" id="Animation_awiyu"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_1c7g6"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6dd45"]
_data = {
"RESET": SubResource("Animation_sj5f0"),
"dead": SubResource("Animation_cf7m7"),
"disappear": SubResource("Animation_f60jp"),
"dying": SubResource("Animation_eur2d"),
"hurt": SubResource("Animation_x3u6u"),
"idle": SubResource("Animation_awiyu"),
"walk": SubResource("Animation_1c7g6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tms75"]
size = Vector2(98, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kw1be"]
size = Vector2(21, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tiddi"]
size = Vector2(16, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65nic"]
size = Vector2(18, 24)

[node name="Zombie" type="RigidBody2D"]
collision_layer = 16
collision_mask = 5
mass = 20.0
continuous_cd = 2
lock_rotation = true
script = ExtResource("1_iajjo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gnirk")
offset = Vector2(0, -24)
hframes = 10
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.625)
shape = SubResource("RectangleShape2D_s08ai")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_6dd45")
}

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(40, -22.5)
shape = SubResource("RectangleShape2D_tms75")

[node name="RightLegRaycast" type="RayCast2D" parent="."]
position = Vector2(16, -3)
target_position = Vector2(0, 8)

[node name="LeftLegRaycast" type="RayCast2D" parent="."]
position = Vector2(-16, -3)
target_position = Vector2(0, 8)

[node name="RightArmRaycast" type="RayCast2D" parent="."]
position = Vector2(9, -17)
target_position = Vector2(10, 0)
collision_mask = 5

[node name="LeftArmRaycast" type="RayCast2D" parent="."]
position = Vector2(-9, -17)
target_position = Vector2(-10, 0)
collision_mask = 5

[node name="PlayerInReachArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInReachArea"]
position = Vector2(10.5, -15)
shape = SubResource("RectangleShape2D_kw1be")

[node name="DamageDealerArea" parent="." instance=ExtResource("3_ohxbt")]
collision_layer = 128
monitoring = false
monitorable = false
damage = 1

[node name="CollisionShape2D" parent="DamageDealerArea" index="0"]
position = Vector2(8, -15)
shape = SubResource("RectangleShape2D_tiddi")

[node name="DamageReceiverArea" parent="." instance=ExtResource("4_itt0m")]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" parent="DamageReceiverArea" index="0"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_65nic")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[editable path="DamageDealerArea"]
[editable path="DamageReceiverArea"]
